# activate-program

./: .gitignore  README.md  docker-compose.yml
agent-api/: .env.example  Dockerfile  agent.py  cloud_run_auth.py  cloudbuild.yaml  config.py  main.py  pyproject.toml  requirements.txt  test_chat.py
deploy/: deploy-cloud-run.sh
mcp-server/: .env.example  Dockerfile  cloudbuild.yaml  program_service.py  pyproject.toml  requirements.txt  server.py  test_server.py
terraform/: README.md  apis.tf  artifact_registry.tf  builds.tf  cloud_run_agent.tf  cloud_run_mcp.tf  iam.tf  outputs.tf  secrets.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
