[project]
name = "program-agent-api"
version = "0.1.0"
description = "LangChain agent API for Coca-Cola program activation chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.6.0",
    "google-auth>=2.0.0",
    "google-auth>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
